# modern-data-stack-lab

./: .gitignore  README.md  docker-compose.yml
dbt/: profiles.yml.sample
extract_load/: .env.sample  .gitignore  meltano.yml  pyproject.toml
init_data/dbt/: profiles.yml.sample
init_data/metabase/: login.txt
init_data/sql/: mysql.sql  postgres.sql
sql/: mysql.sql
transformation/: dbt_project.yml  pyproject.toml
transformation/models/: aggregate_orders_per_day.sql  denormalized_orders.sql  models.yml  schema.yml
